# quantum-trio

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  book_now.html  contact_us.html  coverage.xml  docker-compose.yml  home.html  location.html  manage.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  service_item.html  sonar-project.properties  tox.ini
.github/workflows/: build.yml  sonarcloud.yml  test.yml
CareHub/: asgi.py  manage.py  settings.py  urls.py
CareHub/CareHub/: wsgi.py
Registration/: backends.py  urls.py  views.py
booking/: admin.py  models.py  tests.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_alter_bookingslot_notes.py  0003_bookingslot_shop_end_bookingslot_user_end.py  0004_bookingslot_rated.py  0005_alter_bookingslot_user_end.py
carehub/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
chatbot/: urls.py  views.py
coverage/: lcov.info
css/: style.css
docs/: CONTRIBUTING.md  README.md  SRS.md  setup.md
myApp/: admin.py  models.py  views.py
myApp/migrations/: 0001_initial.py  0002_area_district_division_popularlandmark_upazilla_and_more.py  0003_services_rename_popularlandmark_landmark.py  0004_items.py  0005_alter_services_name.py  0006_rename_services_service_item_delete_items.py
my_app/: admin.py  models.py  tests.py  views.py
registration/: form.py  forms.py  tests.py  urls.py  views.py
shop_profile/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
user_profile/: admin.py  models.py  tests.py  urls.py  views.py
(+149 files in other folders)
