[tool.poetry]
name = "quantum-trio"
version = "0.1.0"
description = "A Django-based multi-role service booking system"
authors = ["Israt Jahan Reshma <isratjahan151q@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "quantum_trio" }]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
djangorestframework = "^3.14"
python-dotenv = "^1.0"
coverage = "^7.4"
pytest = "^8.0"
pytest-django = "^4.8"
requests = "^2.31"

[tool.poetry.dev-dependencies]
flake8 = "^7.0"
pre-commit = "^3.6"
black = "^24.3"
isort = "^5.13"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "manage.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
